[gd_scene load_steps=2 format=3 uid="uid://csw2flom33i46"]

[ext_resource type="Script" path="res://Profile.gd" id="1_aefxs"]

[node name="Profile" type="PanelContainer"]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_aefxs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ProfilePictureTRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="IdLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ID:"

[node name="IdValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="DisplayNameLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Display Name:"

[node name="DisplayNameValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="GivenNameLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Given Name:"

[node name="GivenNameValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="FamilyNameLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Familiy Name:"

[node name="FamilyNameValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="ProfilePictureUriLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Profile Picture Uri:"

[node name="ProfilePictureUriValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="PasswordLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Password:"

[node name="PasswordValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="GoogleIdTokenLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Google Token:"

[node name="GoogleIdTokenValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="PhoneNumberLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Phone Number:"

[node name="PhoneNumberValLbl" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
